--- a/configs/ros_noetic.yaml
+++ b/configs/ros_noetic.yaml
@@ -21,6 +21,7 @@ system_packages:
 volumes:
   - "~/Projects:/home/noetic/Projects:rw"
 environment:
+  TERM: xterm-256color
   ROS_MASTER_URI: "http://localhost:11311"
   ROS_HOSTNAME: "localhost"
 network_mode: "host"
