--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "ros-docker"
-version = "0.1.0"
-description = "Add your description here"
+version = "0.1.1"
+description = "Generate Docker environments for various ROS (Robot Operating System) distributions"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
@@ -10,6 +10,7 @@ dependencies = [
     "pyyaml>=6.0.2",
     "rich>=13.9.4",
 ]
+license = {file = "LICENSE"}
 
 [dependency-groups]
 dev = [
