--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "jinja2>=3.1.5",
     "pyyaml>=6.0.2",
     "rich>=13.9.4",
+    "toml>=0.10.2",
+    "gitpython>=3.1.44",
 ]
 license = { file = "LICENSE" }
 
