--- a/configs/dev_profiles/shuqi.yaml
+++ b/configs/dev_profiles/shuqi.yaml
@@ -50,7 +50,7 @@ extra_commands:
   - "git config --global user.name 'Shuqi Xiao' && git config --global user.email 'xiaosq2000@gmail.com'"
   - "git lfs install"
   # Neovim 
-  - "nvim --headless \"+Lazy! sync\" +qa"
+  - "~/.local/bin/nvim --headless \"+Lazy! sync\" +qa"
 
 volumes:
   - "~/Projects:/home/noetic/Projects:rw"
